@@ -5,152 +5,142 @@ import back.backend.dto.ExameMEDTO;
 import back.backend.dto.ExameResumoDTO;
 import back.backend.model.ExameME;
 import back.backend.service.ExameMEService;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/exames-me")
 @CrossOrigin(origins = "*")
 public class ExameMEController {
 
-    private final ExameMEService exameService;
-
-    public ExameMEController(ExameMEService exameService) {
-        this.exameService = exameService;
-    }
+    @Autowired
+    private ExameMEService exameService;
 
     // POST - Criar novo exame
     @PostMapping
-    public ResponseEntity<?> criarExame(@RequestBody ExameME exame) {
+    public ResponseEntity<ExameMEDTO> criarExame(@RequestBody ExameME exame) {
         try {
             ExameME novoExame = exameService.criarExame(exame);
-            return ResponseEntity.status(HttpStatus.CREATED)
-                    .body(ExameMEDTO.fromEntity(novoExame));
+            return ResponseEntity.status(HttpStatus.CREATED).body(ExameMEDTO.fromEntity(novoExame));
         } catch (RuntimeException e) {
-            return ResponseEntity.badRequest()
-                    .body(new ErrorResponseDTO(e.getMessage(), 400));
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).build();
         }
     }
 
     // GET - Listar exames de um protocolo
     @GetMapping("/protocolo/{protocoloId}")
     public ResponseEntity<List<ExameMEDTO>> listarExamePorProtocolo(@PathVariable Long protocoloId) {
-        List<ExameMEDTO> lista = exameService.listarExamesPorProtocolo(protocoloId)
-                .stream()
-                .map(ExameMEDTO::fromEntity)
-                .toList();
-
-        return ResponseEntity.ok(lista);
+        try {
+            List<ExameME> exames = exameService.listarExamesPorProtocolo(protocoloId);
+            return ResponseEntity.ok(exames.stream().map(ExameMEDTO::fromEntity).collect(Collectors.toList()));
+        } catch (RuntimeException e) {
+            return ResponseEntity.notFound().build();
+        }
     }
 
     // GET - Listar exames clínicos
     @GetMapping("/protocolo/{protocoloId}/clinicos")
     public ResponseEntity<List<ExameMEDTO>> listarExamesClinico(@PathVariable Long protocoloId) {
-        return ResponseEntity.ok(
-                exameService.listarExamesClinico(protocoloId)
-                        .stream()
-                        .map(ExameMEDTO::fromEntity)
-                        .toList()
-        );
+        try {
+            List<ExameME> exames = exameService.listarExamesClinico(protocoloId);
+            return ResponseEntity.ok(exames.stream().map(ExameMEDTO::fromEntity).collect(Collectors.toList()));
+        } catch (RuntimeException e) {
+            return ResponseEntity.notFound().build();
+        }
     }
 
     // GET - Listar exames complementares
     @GetMapping("/protocolo/{protocoloId}/complementares")
     public ResponseEntity<List<ExameMEDTO>> listarExamesComplementares(@PathVariable Long protocoloId) {
-        return ResponseEntity.ok(
-                exameService.listarExamesComplementares(protocoloId)
-                        .stream()
-                        .map(ExameMEDTO::fromEntity)
-                        .toList()
-        );
+        try {
+            List<ExameME> exames = exameService.listarExamesComplementares(protocoloId);
+            return ResponseEntity.ok(exames.stream().map(ExameMEDTO::fromEntity).collect(Collectors.toList()));
+        } catch (RuntimeException e) {
+            return ResponseEntity.notFound().build();
+        }
     }
 
     // GET - Listar exames laboratoriais
     @GetMapping("/protocolo/{protocoloId}/laboratoriais")
     public ResponseEntity<List<ExameMEDTO>> listarExamesLaboratoriais(@PathVariable Long protocoloId) {
-        return ResponseEntity.ok(
-                exameService.listarExamesLaboratoriais(protocoloId)
-                        .stream()
-                        .map(ExameMEDTO::fromEntity)
-                        .toList()
-        );
+        try {
+            List<ExameME> exames = exameService.listarExamesLaboratoriais(protocoloId);
+            return ResponseEntity.ok(exames.stream().map(ExameMEDTO::fromEntity).collect(Collectors.toList()));
+        } catch (RuntimeException e) {
+            return ResponseEntity.notFound().build();
+        }
     }
 
     // GET - Buscar exame por ID
     @GetMapping("/{id}")
     public ResponseEntity<?> buscarPorId(@PathVariable Long id) {
-        return exameService.buscarPorId(id)
-                .map(e -> ResponseEntity.ok(ExameMEDTO.fromEntity(e)))
-                .orElseGet(() -> ResponseEntity.status(HttpStatus.NOT_FOUND)
-                        .body(new ErrorResponseDTO("Exame não encontrado", 404)));
+        Optional<ExameME> exame = exameService.buscarPorId(id);
+        return exame.map(value -> ResponseEntity.ok(ExameMEDTO.fromEntity(value)))
+                .orElseGet(() -> ResponseEntity.notFound().build());
     }
 
     // PUT - Atualizar exame
     @PutMapping("/{id}")
     public ResponseEntity<?> atualizarExame(@PathVariable Long id, @RequestBody ExameME exame) {
         try {
-            return ResponseEntity.ok(
-                    ExameMEDTO.fromEntity(exameService.atualizarExame(id, exame))
-            );
+            ExameME exameAtualizado = exameService.atualizarExame(id, exame);
+            return ResponseEntity.ok(ExameMEDTO.fromEntity(exameAtualizado));
         } catch (RuntimeException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(new ErrorResponseDTO(e.getMessage(), 404));
+            return ResponseEntity.notFound().build();
         }
     }
 
-    // POST - Registrar resultado
+    // POST - Registrar resultado do exame
     @PostMapping("/{id}/resultado")
     public ResponseEntity<?> registrarResultado(
             @PathVariable Long id,
             @RequestParam String resultado,
             @RequestParam(required = false) Boolean resultado_positivo,
             @RequestParam(required = false) String responsavel) {
-
         try {
-            return ResponseEntity.ok(
-                    ExameMEDTO.fromEntity(
-                            exameService.registrarResultado(id, resultado, resultado_positivo, responsavel)
-                    )
-            );
+            ExameME exame = exameService.registrarResultado(id, resultado, resultado_positivo, responsavel);
+            return ResponseEntity.ok(ExameMEDTO.fromEntity(exame));
         } catch (RuntimeException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(new ErrorResponseDTO(e.getMessage(), 404));
+            return ResponseEntity.notFound().build();
         }
     }
 
-    // GET - Resumo
+    // GET - Obter resumo dos exames
     @GetMapping("/protocolo/{protocoloId}/resumo")
-    public ResponseEntity<?> obterResumo(@PathVariable Long protocoloId) {
+    public ResponseEntity<ExameResumoDTO> obterResumo(@PathVariable Long protocoloId) {
         try {
-            return ResponseEntity.ok(
-                    ExameResumoDTO.fromService(
-                            exameService.obterResumoExames(protocoloId)
-                    )
-            );
+            ExameMEService.ExameResumo resumo = exameService.obterResumoExames(protocoloId);
+            return ResponseEntity.ok(ExameResumoDTO.fromService(resumo));
         } catch (RuntimeException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(new ErrorResponseDTO(e.getMessage(), 404));
+            return ResponseEntity.notFound().build();
         }
     }
 
-    // DELETE
+    // DELETE - Deletar exame
     @DeleteMapping("/{id}")
-    public ResponseEntity<?> deletarExame(@PathVariable Long id) {
+    public ResponseEntity<Void> deletarExame(@PathVariable Long id) {
         try {
             exameService.deletarExame(id);
             return ResponseEntity.noContent().build();
         } catch (RuntimeException e) {
-            return ResponseEntity.status(HttpStatus.NOT_FOUND)
-                    .body(new ErrorResponseDTO(e.getMessage(), 404));
+            return ResponseEntity.notFound().build();
         }
     }
 
-    // POST incremental
+    // POST - Criar exame com atualização automática de status (incremental)
     @PostMapping("/incrementar")
     public ResponseEntity<?> criarExameIncremental(@RequestBody ExameME exame) {
-        return criarExame(exame);
+        try {
+            ExameME novoExame = exameService.criarExame(exame);
+            return ResponseEntity.status(HttpStatus.CREATED).body(ExameMEDTO.fromEntity(novoExame));
+        } catch (RuntimeException e) {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST)
+                    .body(new ErrorResponseDTO("Erro ao criar exame: " + e.getMessage(), HttpStatus.BAD_REQUEST.value()));
+        }
     }
 }
